# nav-argus-glue

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  navargus.example.yml  pyproject.toml  setup.cfg  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: format.yml  lint.yml  test.yml
changelog.d/: +drop-python-support.removed.md
src/navargus/: __init__.py  feeder.py  glue.py
tests/: conftest.py  test_config.py  test_dispatch.py  test_maintenance.py  test_resolve.py  test_severity.py  test_stream.py  test_tags.py
