[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nav-argus-glue"
authors = [{name = "Morten Brekkevold", email = "morten.brekkevold@sikt.no"}]
description = "An Argus glue service for Network Administration Visualized"
keywords = ["api", "argus", "client"]
license = "GPL-3.0-only"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "argus-api-client>=0.5.0",
    "pyaml",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
GitHub = "https://github.com/Uninett/nav-argus-glue"
Argus = "https://network.geant.org/argus/"
NAV = "http://nav.uninett.no/"

[project.scripts]
navargus = "navargus.glue:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "navargus.__version__"}

[tool.ruff]
line-length = 88
extend-exclude = [
    ".egg-info",
]
output-format = "full"

[tool.ruff.lint]
select = ["BLE001", "E4", "E7", "E9", "F"]
ignore = ["E402"]
