[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "nav-argus-glue"
authors = [{name = "Morten Brekkevold", email = "morten.brekkevold@sikt.no"}]
description = "An Argus glue service for Network Administration Visualized"
keywords = ["api", "argus", "client"]
license = "GPL-3.0-only"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "argus-api-client>=0.5.0",
    "pyaml",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
GitHub = "https://github.com/Uninett/nav-argus-glue"
Argus = "https://network.geant.org/argus/"
NAV = "http://nav.uninett.no/"

[project.scripts]
navargus = "navargus.glue:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools_scm]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [
    ".egg-info",
]
output-format = "full"

[tool.ruff.lint]
select = ["BLE001", "E4", "E7", "E9", "F", "I"]
fixable = ["I"]
ignore = ["E402"]

[dependency-groups]
test = [
    "coverage",
    "pytest>7",
    "pytest-cov",
    "tox",
]
maintenance = [
    "towncrier",
    "uv",
]
dev = [
    "ruff",
    "pre-commit",
    {include-group = "maintenance"},
    {include-group = "test"},
]

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/Uninett/nav-argus-glue/issues/{issue})"
wrap = false

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
exclude_also = [
    "\\.\\.\\.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
