[metadata]
name = nav-argus-glue
author = Morten Brekkevold
author_email = morten.brekkevold@uninett.no
version = attr: navargus.__version__
description = An Argus glue service for Network Administration Visualized
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Uninett/nav-argus-glue
keywords = api, argus, client
license = GPLv3
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
dependency_links=
    https://github.com/Uninett/nav/tarball/5.2.0#egg=nav-5.2.0
install_requires =
    simple_rest_client==1.0.8
    argus-api-client>=0.4.2
    pyaml
package_dir=
    =src
packages = find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  navargus = navargus.glue:main
